SET("OpenCV_DIR" "~/opencv-3.1.0/build")
SET(CMAKE_CXX_STANDARD 11)

cmake_minimum_required(VERSION 3.0)
project(HW4)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(s1 s1.cpp)
add_executable(s2 s2.cpp)
target_link_libraries(s1 ${OpenCV_LIBS})
target_link_libraries(s2 ${OpenCV_LIBS})
